[project]
name = "lc-03-rag"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastembed>=0.7.0",
    "langchain>=1.3.6",
    "langchain-deepseek>=1.1.0",
    "langchain-qdrant>=1.0",
    "langchain-text-splitters>=1.0",
    "numpy>=1.26",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]
