[project]
name = "lg-03-rag-workflow"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastembed>=0.7.0",
    "langchain>=1.3.6",
    "langchain-deepseek>=1.1.0",
    "langgraph>=1.2.4",
    "numpy>=1.26",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.12",
    "rich>=15.0.0",
]
