[project]
name = "mon-02-otel"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastembed>=0.8.0",
    "numpy>=2.2.6",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rich>=15.0.0",
]
