[project]
name = "blog-agent-06-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "fastembed>=0.7.0",
    "httpx>=0.27",
    "langchain>=1.3.6",
    "langchain-deepseek>=1.1.0",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.0",
    "numpy>=1.26",
    "openai>=2.41.0",
    "qdrant-client>=1.12",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "uvicorn>=0.34",
]
